# CloneGram

./: .gitignore  FastTelethon.py  README.md  main.py  pyproject.toml  requirements.txt  requirements_win.txt
bot/: FastTelethon.py  config.py  custom_client.py  message_handler.py  rate_limit.py  settings.py  utils.py
bot/plugins/: commands.py
