[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Folclore <folclore@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pydantic-settings = "^2.4.0"
uvloop = "^0.20.0"
unidecode = "^1.3.8"
filetype = "^1.2.0"
cryptg = "^0.5.0.post0"
hachoir = "^3.3.0"
telethon = "^1.38.1"
tqdm = "^4.67.1"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
bot = 'python -m bot.bot'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
run = 'bot'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
